Fixed issue with properties.

--- a/mod.properties/ModifyGestationPeriod.properties
+++ b/mod.properties/ModifyGestationPeriod.properties
@@ -1,5 +1,7 @@
 classname=org.ausimus.wurmunlimited.mods.modifygestationperiod.Init
 classpath=ModifyGestationPeriod.jar
+sharedClassLoader = true;
+
 # Time in days +1, minimum 1 day, so for 1 day set 0, for 100 days set 99.
 GestationTime = 0
 ActionBreedGestation = true
