--- a/mod.properties/ModifyGestationPeriod.properties
+++ b/mod.properties/ModifyGestationPeriod.properties
@@ -1,19 +1,28 @@
-classname=org.ausimus.wurmunlimited.mods.modifygestationperiod.Init
-classpath=ModifyGestationPeriod.jar
-sharedClassLoader = true;
+classname = org.ausimus.wurmunlimited.mods.modifygestationperiod.Init
+classpath = ModifyGestationPeriod.jar
+sharedClassLoader = true
+
+# Enable decreased pregnancy days when performing Breed action?
+ActionBreedGestation = true
 
 # Time in days +1, minimum 1 day, so for 1 day set 0, for 100 days set 99.
 GestationTime = 0
-ActionBreedGestation = true
 
-# spell shit self explained
+# Enable spell to decrease pregnancy by one day per cast?
 AddSpell = true
-CS_fo = true
-CS_vyn = true
-CS_mag = true
-CS_lib = true
-# if true will add spell to all custom gods with an id > 100 and <= 1024.
+
+# Add spell to all gods?
+CS_all = true
+
+# Which gods get the spell? if CS_all = true ignored.
+CS_fo = false
+CS_vyn = false
+CS_mag = false
+CS_lib = false
+
+# If true will add spell to all custom gods with an id > 100 and <= 1024.
 AddToCustom = true
+
 aCastingTime = 10
 aCost = 70
 aDifficulty = 30
